# littleGuy

./: .gitignore  CUSTOMIZATION.md  README.md  index.html  main.js  minigame.html  package-lock.json  package.json  preload.js  recap.html  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml
src/: activity-logger.js  activity-monitor.js  companion-store.js  index.html  main.tsx  minigame-main.tsx  minigame-renderer.js  minigame.html  recap-main.tsx  recap-renderer.js  recap.html  renderer.js  sprites.js  styles.css  types.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: activity_logger.rs  activity_monitor.rs  analytics.rs  animation.rs  commands.rs  companion_store.rs  ipc_bridge.rs  lib.rs  main.rs
src/animation/: engine.ts
src/components/: Minigame.tsx  Overlay.tsx  Recap.tsx
src/hooks/: useTauri.ts
src/sprites/: sprites.ts
