[package]
name = "little-guy"
version = "2.0.0"
edition = "2021"

[lib]
name = "little_guy_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png"] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
tauri-plugin-autostart = "2"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
duckdb = { version = "1", features = ["bundled"] }
log = "0.4"
env_logger = "0.11"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
once_cell = "1"
anyhow = "1"
uuid = { version = "1", features = ["v4"] }
interprocess = { version = "2", features = ["tokio"] }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Threading",
    "Win32_System_SystemInformation",
    "Win32_UI_Accessibility",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "4", default-features = false, features = ["tokio"] }

[profile.release]
opt-level = "s"
strip = true
lto = true
codegen-units = 1
panic = "abort"
